// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 8,
          "padding": 20,
          "shadowColor": "rgba(0, 0, 0, 0.24)",
          "shadowOpacity": 0.8,
        },
        Object {
          "borderRadius": 8,
          "shadowOffset": Object {
            "height": 3,
            "width": 0,
          },
          "shadowRadius": 3,
        },
      ],
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-around",
        "marginBottom": 10,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
        "justifyContent": "space-around",
        "marginLeft": 8,
        "marginTop": 8,
        "position": "absolute",
        "top": 0,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      1
      /
      3
    </Text>
  </View>
  <Question
    dispatch={[Function]}
    quiz={
      Object {
        "answer": "One Answer",
        "question": "One Quetion",
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-around",
        "marginBottom": 20,
        "marginTop": 30,
        "position": "absolute",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Array [
          Array [
            Object {
              "alignItems": "center",
            },
            Object {
              "backgroundColor": "#fff",
              "borderColor": "#292477",
              "borderRadius": 3,
              "borderWidth": 1,
              "padding": 5,
              "paddingLeft": 25,
              "paddingRight": 25,
            },
          ],
          Object {
            "backgroundColor": "#3cb371",
            "margin": 5,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#fff",
            "fontSize": 24,
          }
        }
      >
        Correct?
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Array [
          Array [
            Object {
              "alignItems": "center",
            },
            Object {
              "backgroundColor": "#fff",
              "borderColor": "#292477",
              "borderRadius": 3,
              "borderWidth": 1,
              "padding": 5,
              "paddingLeft": 25,
              "paddingRight": 25,
            },
          ],
          Object {
            "backgroundColor": "#ff0000",
            "margin": 5,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#fff",
            "fontSize": 24,
          }
        }
      >
        Incorrect?
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`show quiz answer 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "backgroundColor": "#fff",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 8,
          "padding": 20,
          "shadowColor": "rgba(0, 0, 0, 0.24)",
          "shadowOpacity": 0.8,
        },
        Object {
          "borderRadius": 8,
          "shadowOffset": Object {
            "height": 3,
            "width": 0,
          },
          "shadowRadius": 3,
        },
      ],
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-around",
        "marginBottom": 10,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
        "justifyContent": "space-around",
        "marginLeft": 8,
        "marginTop": 8,
        "position": "absolute",
        "top": 0,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      1
      /
      3
    </Text>
  </View>
  <Answer
    dispatch={[Function]}
    quiz={
      Object {
        "answer": "One Answer",
        "question": "One Quetion",
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-around",
        "marginBottom": 20,
        "marginTop": 30,
        "position": "absolute",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Array [
          Array [
            Object {
              "alignItems": "center",
            },
            Object {
              "backgroundColor": "#fff",
              "borderColor": "#292477",
              "borderRadius": 3,
              "borderWidth": 1,
              "padding": 5,
              "paddingLeft": 25,
              "paddingRight": 25,
            },
          ],
          Object {
            "backgroundColor": "#3cb371",
            "margin": 5,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#fff",
            "fontSize": 24,
          }
        }
      >
        Correct?
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Array [
          Array [
            Object {
              "alignItems": "center",
            },
            Object {
              "backgroundColor": "#fff",
              "borderColor": "#292477",
              "borderRadius": 3,
              "borderWidth": 1,
              "padding": 5,
              "paddingLeft": 25,
              "paddingRight": 25,
            },
          ],
          Object {
            "backgroundColor": "#ff0000",
            "margin": 5,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#fff",
            "fontSize": 24,
          }
        }
      >
        Incorrect?
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
